vlib/v/checker/tests/var_eval_not_used_scope.out
vlib/v/checker/tests/var_eval_not_used_scope.v:7:3: error: `c` evaluated but not used 
    5 | fn main() {
    6 |     {
    7 |         c
      |         ^
    8 |     }
    9 | }
