vlib/v/checker/tests/var_eval_not_used_scope.vv
const (
	c = 1
)

fn main() {
	{
		c
	}
}
